# etch_in_rust

./: Cargo.toml
benches/: bench_main.rs
src/: examples.rs  lib.rs  main.rs  rbtree.rs  streams.rs
src/examples/: sorted_vec_intersect.rs  tree_iteration.rs  triangle_query.rs
src/rbtree/: rbtree_lib.rs
src/streams/: add_stream.rs  binary_search.rs  chain.rs  contract_stream.rs  coo_mat.rs  csr_mat.rs  fun_stream.rs  macros.rs  mul_stream.rs  sorted_vec.rs  sparse_vec.rs  stream_defs.rs  zip_stream.rs
