[package]
name = "etch_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.17"
replace_with = "0.1.7"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }
rand = "0.8.5"
quickcheck = "1"
quickcheck_macros = "1"

[[bench]]
name = "bench_main"
harness = false

[lib]
name = "etch"
path = "src/lib.rs"
